manifests/sample-apps/helloworld_old/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  selector:
    app: helloworld
  ports:
    - port: 80
      targetPort: 5678
      name: http
